--- a/Home/Tpl/Index/index.html
+++ b/Home/Tpl/Index/index.html
@@ -1,6 +1,6 @@
-<load file="Common/head.html" />
+<load file="__TPL__/Common/head.html" />
 <body class="home blog">
-<load file="Common/header.html" />
+<load file="__TPL__/Common/header.html" />
 <section id="zan-bodyer">
   <div class="container">
     <section class="row">
@@ -86,13 +86,13 @@
         </list>
 
       </section>
-      <load file="Common/sidebar.html" />
+      <load file="__TPL__/Common/sidebar.html" />
       <div class="col-md-8 pagination pagination-lg">
           {$page}
       </div>
     </section>
   </div>
 </section>
-<load file="Common/footer.html" />
+<load file="__TPL__/Common/footer.html" />
 </body>
 </html>
