--- a/Home/Tpl/Show/Show.html
+++ b/Home/Tpl/Show/Show.html
@@ -1,6 +1,6 @@
-<load file="Common/head.html" />
+<load file="__TPL__/Common/head.html" />
 <body class="single single-post single-format-standard article-29">
-<load file="Common/header.html" />
+<load file="__TPL__/Common/header.html" />
 <div id="zan-bodyer" style="padding-top: 30px;">
   <div class="container">
     <section class="row">
@@ -264,10 +264,10 @@
           </ol>
         </div>
       </div>
-    <load file="Common/sidebar.html" />
+    <load file="__TPL__/Common/sidebar.html" />
     </section>
   </div>
 </div>
-<load file="Common/footer.html" />
+<load file="__TPL__/Common/footer.html" />
 </body>
 </html>
