--- a/Home/Tpl/Index/search.html
+++ b/Home/Tpl/Index/search.html
@@ -1,6 +1,6 @@
-<load file="Common/head.html" />
+<load file="__TPL__/Common/head.html" />
 <body class="home blog">
-<load file="Common/header.html" />
+<load file="__TPL__/Common/header.html" />
 <section id="zan-bodyer">
   <div class="container">
     <section class="row">
@@ -43,13 +43,13 @@
         </list>
         
       </section>
-      <load file="Common/sidebar.html" />
+      <load file="__TPL__/Common/sidebar.html" />
       <div class="col-md-8"><a id='load-more' class='btn btn-zan btn-block' load-data='努力加载中...' href='http://www.yeahzan.com/zanblog/page/2'><i></i>
         <attr>加载更多</attr>
         </a></div>
     </section>
   </div>
 </section>
-<load file="Common/footer.html" />
+<load file="__TPL__/Common/footer.html" />
 </body>
 </html>
